--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- icon -->
     <link rel="icon" href="images/s-logo.png">
   </head>
-  <body>
+  <body onload="start()">
 
     <div class="container">
       <h1>Refresh Me</h1>
@@ -27,6 +27,7 @@
       </div>
 
     </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script src="index.js"></script>
   </body>
